--- a/public/css/template.css
+++ b/public/css/template.css
@@ -1,11 +1,10 @@
-<link rel="stylesheet" href="./public/css/style.css">
-
 :root{
   --txt: rgb(0, 0, 0);
   --pri: rgb(37, 40, 50);
   --sec: rgb(101, 115, 141);
   --ter: rgb(164, 160, 189);
 }
+
 
 * {
   margin: 0;
@@ -60,6 +59,17 @@ a.btn {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 24px;
+  margin: 5px;
   border: 1px solid;
   border-color: var(--ter);
+}
+
+.a.btn:hover {
+  background-color: var(--ter);
+}
+
+.divv{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
 }
