--- a/public/css/template.css
+++ b/public/css/template.css
@@ -1,13 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
+
 :root{
   --txt: rgb(0, 0, 0);
-  --pri: rgb(37, 40, 50);
-  --sec: rgb(101, 115, 141);
-  --ter: rgb(164, 160, 189);
+  --pri: rgb(3, 8, 23);
+  --sec: rgb(135, 158, 187);
+  --ter: rgb(190, 237, 255);
+  color: var(--ter);
+  font-family: 'Dosis', sans-serif;
 }
 
 
 * {
-  margin: 0;
   padding: 0;
   box-sizing: border-box;
   background: var(--pri);
@@ -19,25 +22,19 @@
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
   float: left;
-  color: var(--txt);
+  display: block;
   text-align: center;
-  background-color: var(--sec);
-  padding: 14px 16px;
+  padding: 14.5px 16px;
   text-decoration: none;
   font-size: 24px;
-  border: 1px solid;
-  border-color: var(--ter);
 }
 
-/* Change the color of links on hover */
 .topnav a:hover {
   background-color: var(--ter);
 }
 
-/* Create a right-aligned (split) link inside the navigation bar */
 .topnav a.split {
   float: right;
   color: var(--pri);
@@ -52,24 +49,159 @@
   border-color: var(--ter);
 }
 
-a.btn {
+.navigation {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+}
+
+.nav_btn {
   color: var(--txt);
   text-align: center;
   background-color: var(--sec);
-  padding: 14px 16px;
   text-decoration: none;
   font-size: 24px;
-  margin: 5px;
+  overflow: hidden;
+  border: 1px solid;
+  border-color: var(--ter);
+  overflow: hidden;
+  padding: 15px;
+}
+
+.left{
+  width: calc(20% - 15px);
+}
+
+.nav_btn:hover{
+  background: var(--ter);
+  cursor: pointer;
+}
+
+.nav_btn{
+  color: var(--txt);
+  text-align: center;
+  background-color: var(--sec);
+  text-decoration: none;
+  overflow: hidden;
+  width: 100%;
+}
+
+.center {
+  width: 60%;
+  border: 1px solid;
+  border-color: var(--ter);
+  padding: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.right { 
+  align-items: right;
+  width: calc(20% - 15px);
+}
+
+.btn {
+  color: var(--txt);
+  text-align: center;
+  background-color: var(--sec);
+  text-decoration: none;
+  font-size: 24px;
+  overflow: hidden;
   border: 1px solid;
   border-color: var(--ter);
 }
 
-.a.btn:hover {
+.left_btn {
+  color: var(--txt);
+  text-align: center;
+  background-color: var(--sec);
+  text-decoration: none;
+  font-size: 24px;
+  overflow: hidden;
+  border: 1px solid;
+  border-color: var(--ter);
+  overflow: hidden;
+  padding: 15px;
+}
+
+.botnav {
+  background-color: var(--pri);
+  overflow: hidden;
+  width: 99.3%;
+  border: 1px solid;
+  border-color: var(--ter);
+  position: fixed;
+  bottom: 0;
+  margin-bottom: 10px;
+}
+
+.botnav a {
+  float: right;
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.botnav a:hover {
   background-color: var(--ter);
 }
 
-.divv{
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 20px;
+.botnav span {
+  align-items: center;
+  color: var(--ter);
+  font-size: 25px;
+  line-height: 59px;
+  padding-left: 15px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.f_titre{
+  font-size: 25px;
+  line-height: 50px;
+}
+
+input{
+  width: 300px;
+  height: 50px;
+  font-size: 20px;
+  border: 1px solid;
+  border-color: var(--ter);
+  color: var(--ter);
+}
+
+.C_content{
+  display: flex;
+  justify-content: center;
+}
+
+.lien{
+  align-items: center;
+  color: var(--ter);
+  font-size: 25px;
+  text-decoration: none;
+}
+
+.C_content a {
+  margin-right: 20px;
+}
+
+.lien:hover {
+  color: var(--sec);
+}
+
+.ext_cat{
+  border: 1px solid;
+  border-color: var(--ter);
+}
+
+.spacer5{
+  height: 50px;
+}
+
+.spacer2{
+  height: 20px;
 }
