--- a/public/css/template.css
+++ b/public/css/template.css
@@ -5,6 +5,7 @@
   --pri: rgb(3, 8, 23);
   --sec: rgb(135, 158, 187);
   --ter: rgb(190, 237, 255);
+  --qua: rgb(43, 50, 54);
   color: var(--ter);
   font-family: 'Dosis', sans-serif;
 }
@@ -54,6 +55,13 @@
   flex-wrap: wrap;
   flex-direction: row;
   width: 100%;
+  max-height: 70%;
+  overflow: hidden;
+}
+
+#forum{
+  max-height: 70%;
+  overflow: hidden;
 }
 
 .nav_btn {
@@ -93,6 +101,8 @@
   border-color: var(--ter);
   margin-left: 15px;
   margin-right: 15px;
+  display: block;
+  height: 70%;
 }
 
 .right { 
@@ -131,8 +141,7 @@
   border: 1px solid;
   border-color: var(--ter);
   position: fixed;
-  bottom: 0;
-  margin-bottom: 10px;
+  bottom: 0px;
 }
 
 .botnav a {
@@ -203,4 +212,59 @@ input{
 
 .spacer2{
   height: 20px;
+}
+
+.msgl{
+  color: var(--sec);
+  margin-bottom: 2px;
+  float: left;
+  margin-left: 30px;
+  width: 90%;
+}
+
+.msgr{
+  color: var(--sec);
+  margin-bottom: 2px;
+  float: right;
+  margin-left: 30px;
+  width: 90%;
+}
+
+.msgL{
+  float: left;
+  margin-left: 15px;
+  margin-bottom: 15px;
+  padding-left: 15px;
+  border-left: 1px solid;
+  border-color: var(--ter);
+  width: 90%;
+  background: var(--qua);
+  background: linear-gradient(90deg, var(--pri) 0%, var(--pri) 1%, var(--qua) 1.1%, var(--qua) 42%, var(--pri) 100%);
+}
+
+.msgR{
+  float: right;
+  margin-right: 15px;
+  padding-right: 15px;
+  margin-bottom: 15px;
+  border-right: 1px solid;
+  border-color: var(--ter);
+  width: 90%;
+  background: var(--qua);
+  background: linear-gradient(270deg, var(--pri) 0%, var(--pri) 1%, var(--qua) 1.1%, var(--qua) 42%, var(--pri) 100%);
+}
+
+.sw1 {
+  width: 20px;
+}
+
+textarea {
+  color: var(--ter);
+  width: 90%;
+}
+
+#message {
+  resize: none;
+  height: 200px;
+  color: var(--ter);
 }
