--- a/public/css/template.css
+++ b/public/css/template.css
@@ -237,6 +237,10 @@ input{
   height: 50px;
 }
 
+.spacer10{
+  height: 100px;
+}
+
 .spacer2{
   height: 20px;
 }
@@ -297,7 +301,6 @@ input{
 
 .txt_editor{
   width: 100%;
-  height: 40vh;
 }
 
 .txt_editor table {
